<resources>
    <string name="app_name">Codepolitan Attendance Apps</string>
    <string name="check_in">Check-in</string>
    <string name="scanning">Scanning..</string>
    <string name="check_in_success">Check-in success</string>
    <string name="lat_long">Lat: %1$f, Long: %2$f</string>
    <string name="please_activate_location_permission">Please activate location permission</string>
    <string name="please_fill_in_your_email">Please fill in your email</string>
    <string name="please_use_valid_email">Please use valid email</string>
    <string name="please_fill_in_your_password">Please fill in your password</string>
    <string name="please_fill_in_your_confirmation_password">Please fill in your confirmation password</string>
    <string name="your_password_does_not_match">Your password does not match</string>
    <string name="fill_in_password_at_least_6_characters">Fill in Password at least 6 characters</string>
    <string name="get_location_failed">Get Location Failed</string>
    <string name="permission_granted">Permission granted</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="name">Name</string>
    <string name="out_of_range">Out of range</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_email">Send Email</string>
    <string name="sign_in_failed">Sign-In failed</string>
    <string name="logout">Logout</string>
    <string name="succes_fully_signed_out">Successfully signed out</string>
</resources>