<?xml version="1.0" encoding="utf-8"?>
<com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rippleBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:rb_color="@android:color/white"
    app:rb_radius="32dp"
    app:rb_rippleAmount="6"
    app:rb_duration="3000"
    app:rb_scale="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/textViewScanning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/scanning"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewCheckIn"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCheckIn"
        android:src="@drawable/ic_person_24"
        android:backgroundTint="@android:color/white"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check_in" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCheckInSuccess"
        android:visibility="gone"
        android:text="@string/check_in_success"
        android:background="@drawable/bg_checkin_success"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="68dp"
        android:paddingEnd="68dp"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />


</com.skyfishjy.library.RippleBackground>