<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="0dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbSignIn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            >
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:paddingStart="@dimen/padding_start"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/padding_end"
                android:paddingBottom="@dimen/padding_bottom" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:hintEnabled="false"
                android:gravity="center_vertical"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/padding_start"
                    android:paddingTop="@dimen/padding_top"
                    android:paddingEnd="@dimen/padding_end"
                    android:paddingBottom="@dimen/padding_bottom" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_text_button"
                />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_bottom"
                />

            <LinearLayout
                android:id="@+id/btnFacebookSignIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn_facebook"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/facebook"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnGoogleSignIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:background="@drawable/bg_btn_google"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/ic_google" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>