<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="0dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbSignUp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            >
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/signup"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:paddingStart="@dimen/padding_start"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/padding_end"
                android:paddingBottom="@dimen/padding_bottom" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:hintEnabled="false"
                android:gravity="center_vertical"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/padding_start"
                    android:paddingTop="@dimen/padding_top"
                    android:paddingEnd="@dimen/padding_end"
                    android:paddingBottom="@dimen/padding_bottom" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:hintEnabled="false"
                android:gravity="center_vertical"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextConfirmPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/padding_start"
                    android:paddingTop="@dimen/padding_top"
                    android:paddingEnd="@dimen/padding_end"
                    android:paddingBottom="@dimen/padding_bottom" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>